# PEGD

./: .gitignore  BRIDGE-COMPLETE.md  BRIDGE-DEPLOY.md  BRIDGE-SIMPLE.md  BRIDGE-WITH-PROGRAM.md  CNAME  DEPLOY-MULTISIG.md  GUARDIAN-DEPLOY.md  MAINNET-DEPLOY.md  MULTI-GUARDIAN.md  NFT-MARKETPLACE-DEPLOY.md  NFT-MARKETPLACE-PLAN.md  PORTAL_SETUP.md  RELAYER-DEPLOY.md  REORGANIZATION_SUMMARY.md  TEST-MULTISIG-FLOW.md  VISUAL_FLOW_COMPARISON.txt  WORMHOLE-INTEGRATION.md  _headers  about-xrp.html  admin.html  advisor.html  build-verus-wasm.sh  command.html  deploy.sh  disclaimer.html  faq.html  governance.html  index-v1-archive.html  index-v2.html  index-v2.html.backup  index.html  install-windows.cmd  install.ps1  install.sh  lock-token.html  mine.html  mobile.html  nft-list.html  order-complete.html  (+29 more)
.well-known/: security.txt
.wrangler/cache/: cf.json  pages.json  wrangler-account.json
data/: listings.json  metapod-nft-metadata.json
docs/: BUYER-FLOW.md
docs/backburner/: ALLBRIDGE-INTEGRATION.md
functions/: _middleware.js
functions/_lib/: chairman.js  directives.js  holder.js  json.js  portal.js  security.js  supabase-admin.js  xumm-pay.js
js/: app.js  command-portal.js  directives-board.js  officer-sidecar.js  order-status.js  pegd-checkout.js  portal-auth.js  portal-dashboard.js  xrp-checkout.js  xrp-pegd-swap.js
scripts/: generate-guardians.js  init-guardians.ts  mint-metapod-nft-poc.js
solana-program/: Anchor.toml  DEPLOY.md  README.md  package.json
solana-program/programs/pegd-bridge/: Cargo.toml
sql/: add-nft-support.sql
(+46 files in other folders)
