[package]
name = "pegd-bridge"
version = "0.1.0"
description = "PEGD Multi-Sig Bridge between XRPL and Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pegd_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
